# ARIS-Embedded-Processing-Unit

./: .env.example  .gitignore  AGENTS.md  README.md  flake.nix  justfile  pyproject.toml
docker/: ai.Dockerfile  compose.yaml  embedded.Dockerfile  fastdds.xml  isaac-sim.README.md  ros2.Dockerfile  ros_entrypoint.sh
docs/: AUTORUN_LOG.md  FINAL_ARCHITECTURE_SPEC.md  HANDOFF.md  README.md  ai_layer.md  architecture_framework.md  architecture_mapping.md  codebase_boundaries.md  communication_protocol.md  docker.md  embedded.md  environment.md  internal_structure.md  mcu_protocol.md  nix.md  permissions_setup.md  project_overview.md  ros2.md  safety.md  sensors.md  simulation.md  troubleshooting.md  v2_lidar_bag_replay_scoring.md  verification_plan.md  workflows.md
firmware/stm32f446_safety_mcu/: CMakeLists.txt  Cargo.toml  README.md
firmware/stm32f446_safety_mcu/.cargo/: config.toml
firmware/stm32f446_safety_mcu/include/: README.md
firmware/stm32f446_safety_mcu/src/: lib.rs
firmware/stm32f446_safety_mcu/tests/: safety_core.rs
scripts/: can_create_vcan0.sh  check_architecture_contracts.py  check_architecture_contracts.sh  check_autonomous_sim.sh  check_bootstrap_doctor.sh  check_branch_policy.py  check_branch_policy.sh  check_core_pipeline_flow.sh  check_core_pipeline_repeatability.sh  check_core_readiness.sh  check_devices.sh  check_documented_commands.py  check_documented_commands.sh  check_embedded_dry_run.sh  check_field_validation.sh  check_gpu_container.sh  check_headless_readiness_audit.sh  check_headless_release_candidate.sh  check_headless_status.sh  check_hil_preflight.sh  check_host.sh  check_host_policy.py  check_host_policy.sh  check_lidar_sim.sh  check_mcu_serial_loopback.sh  check_operational_readiness_audit.sh  check_operator_goal.sh  check_python_tests.sh  check_ros2.sh  check_scan_cloud_contract.sh  check_sim.sh  check_v1_route_repeat.sh  check_v2_gazebo_drift_recovery.sh  check_v2_gazebo_lidar.sh  check_v2_gazebo_localization.sh  check_v2_gazebo_moving_localization.sh  check_v2_gazebo_physics.sh  check_v2_gazebo_physics_localization.sh  check_v2_gazebo_stack.sh  check_v2_lidar_bag_contract.sh  (+44 more)
sim/launch/: README.md
sim/maps/: README.md
sim/models/: README.md
sim/worlds/: aris_empty.sdf
src/aris_ai_semantics/: package.xml  setup.cfg  setup.py
src/aris_ai_semantics/aris_ai_semantics/: __init__.py  annotator.py  review_report.py
src/aris_ai_semantics/test/: test_annotator.py  test_review_report.py
src/aris_bringup/: package.xml  setup.cfg  setup.py
src/aris_bringup/aris_bringup/: operator_api.py  operator_api_node.py  teleop_core.py  teleop_node.py
src/aris_bringup/launch/: bringup.launch.py  record.launch.py  teleop.launch.py
src/aris_bringup/test/: test_teleop_core.py
src/aris_description/: package.xml  setup.cfg  setup.py
src/aris_description/launch/: description.launch.py
src/aris_description/urdf/: aris.urdf.xacro
src/aris_gui/: .metadata  COLCON_IGNORE  README.md  pubspec.yaml
src/aris_gui/lib/: main.dart
src/aris_interfaces/: CMakeLists.txt  README.md  package.xml
src/aris_localization/: README.md  package.xml  setup.cfg  setup.py
src/aris_localization/aris_localization/: __init__.py  fusion_gate.py  gazebo_pose_sync.py  gazebo_pose_sync_node.py  lidar_localization_node.py  localization_core.py  scan_matching.py
src/aris_localization/launch/: v2_gazebo_drift_recovery.launch.py  v2_gazebo_lidar.launch.py  v2_gazebo_localization.launch.py  v2_gazebo_moving_localization.launch.py  v2_gazebo_physics.launch.py  v2_gazebo_physics_localization.launch.py  v2a_drift_recovery.launch.py  v2a_lidar_localization.launch.py  v2a_route_repeat.launch.py
src/aris_localization/maps/: aris_lidar_smoke.yaml
src/aris_localization/test/: test_gazebo_pose_sync.py  test_localization_core.py
src/aris_localization/worlds/: aris_lidar_smoke.sdf
src/aris_mapping/: README.md  package.xml  setup.cfg  setup.py
src/aris_mapping/aris_mapping/: __init__.py  semantic_map.py  semantic_map_node.py
src/aris_mapping/launch/: v3_semantic_map_sim.launch.py
src/aris_mapping/test/: test_semantic_map.py
src/aris_mcu_bridge/: package.xml  setup.cfg  setup.py
src/aris_mcu_bridge/aris_mcu_bridge/: __init__.py  bridge_node.py  bridge_sim.py  protocol.py  transport.py
src/aris_mcu_bridge/launch/: mcu_bridge_sim.launch.py
src/aris_mcu_bridge/test/: test_protocol.py
src/aris_perception/: README.md  package.xml  setup.cfg  setup.py
src/aris_perception/aris_perception/: __init__.py  dynamic_obstacle_node.py  dynamic_obstacles.py  gazebo_cloud_adapter_node.py  semantic_projection.py  simulated_segmentation_node.py
src/aris_perception/test/: test_dynamic_obstacles.py  test_semantic_projection.py
src/aris_planning/: README.md  package.xml  setup.cfg  setup.py
src/aris_planning/aris_planning/: __init__.py  astar.py  cmd_drive.py  dynamic_obstacle_advisory.py  global_planner_node.py  local_planner_node.py  path_recorder_node.py  pure_pursuit.py  route.py  route_graph.py
src/aris_planning/launch/: path_recorder.launch.py  v4_goal_nav_rviz.launch.py  v4_goal_nav_sim.launch.py  v4_rviz.launch.py
src/aris_planning/rviz/: v4_demo.rviz
src/aris_planning/test/: test_planning.py
src/aris_vehicle_sim/: package.xml  setup.cfg  setup.py
tests/evidence/: test_architecture_contracts.py  test_bootstrap_doctor.py  test_branch_policy.py  test_core_pipeline_repeatability_summary.py  test_documented_commands.py  test_field_validation_report.py  test_headless_readiness_audit.py  test_headless_release_candidate_validator.py  test_headless_status_summary.py  test_hil_preflight.py  test_host_policy.py  test_operational_readiness_audit.py  test_readiness_evidence_index.py  test_validate_v2_lidar_bag.py
tests/gui/: test_export_gui_snapshot.py
tests/localization/: README.md
tests/mapping/: test_semantic_map_snapshot_compare.py  test_semantic_map_snapshot_validator.py
tests/planning/: test_global_planner_snapshot.py  test_planning_reference.py
tests/protocol/: test_protocol_reference.py
tests/simulation/: README.md
(+25 files in other folders)
