[package]
name = "aris-stm32f446-safety-mcu"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust safety-core scaffold for the ARIS STM32F446 safety MCU"

[lib]
name = "aris_stm32f446_safety_mcu"
path = "src/lib.rs"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"
