<?xml version="1.0"?>
<package format="3">
  <name>aris_ai_semantics</name>
  <version>0.1.0</version>
  <description>Advisory AI semantic annotations for ARIS map update events.</description>
  <maintainer email="aris@example.invalid">ARIS</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
