<?xml version="1.0"?>
<package format="3">
  <name>aris_bringup</name>
  <version>0.1.0</version>
  <description>ARIS system bringup: the single use_sim:=true|false / mode:=teleop|auto launch switch (Sim2Real Strategy 6), the manual teleop bridge, and rosbag recording.</description>
  <maintainer email="aris@example.invalid">ARIS</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>aris_description</exec_depend>
  <exec_depend>aris_vehicle_sim</exec_depend>
  <exec_depend>aris_planning</exec_depend>
  <exec_depend>aris_mcu_bridge</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>ros2bag</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
