<?xml version="1.0"?>
<package format="3">
  <name>aris_mapping</name>
  <version>0.1.0</version>
  <description>Semantic HD map cores for ARIS V3 simulation scaffolding.</description>
  <maintainer email="aris@example.invalid">ARIS</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
