<?xml version="1.0"?>
<package format="3">
  <name>aris_planning</name>
  <version>0.1.0</version>
  <description>Starter global and local planners for ARIS simulation.</description>
  <maintainer email="aris@example.invalid">ARIS</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>aris_mapping</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
